# parser_portal_edu_az

./: PLAN.md  README.md  agents.md  atis_enterprisers.json  download_images.py  foreigner_specialities.json  foreigner_specialities2.json  full_translation_map.json  gemini.md  generate_prep_report.py  prep_prog_report.html  programs_report.html  pyproject.toml  requirements.txt  uni.txt  university_details.json  ОТЧЁТ_СПЕЦИАЛЬНОСТЬ_60213.md
OLD/: create_full_translation_map.py  extract_specialties.py  generate_translation_map.py  programs_report.html  spec_map_temp.json  specialties_output.txt  temp_translation_script.py  test_data_selection.py  translated_texts_temp.json  translation_map.json  uni_map_temp.json  update_photo_urls.py
src/portal_data_processor/: __init__.py  cli.py  client.py  report_template.html
src/portal_data_processor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
