[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portal-data-processor"
version = "2.0.0"
description = "Обработка локальных JSON-файлов с данными о программах с portal.edu.az"
authors = [{name = "Data Engineering"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.1",
  "matplotlib>=3.8"
]

[project.scripts]
process-portal-data = "portal_data_processor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
