[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portal-data-processor"
version = "3.0.0"
description = "Создание интерактивного каталога программ по данным из JSON-файлов."
authors = [{name = "Fluffy"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.1",
  "matplotlib>=3.8",
  "haversine>=2.8.0",
  "Jinja2>=3.1.0"
]

[project.scripts]
process-portal-data = "portal_data_processor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]